@@ -148,6 +148,14 @@
    ...
 }
 
+{
+   libamdocl-orca64_cond1
+   Memcheck:Cond
+   ...
+   obj:*/libamdocl-orca64.so
+   ...
+}
+
 ################################################################################
 # AMD fglrx
 ################################################################################
